--- a/www/index.html
+++ b/www/index.html
@@ -8,30 +8,32 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
-    <!-- Good default declaration:
-    * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-    * Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-        * Enable inline JS: add 'unsafe-inline' to default-src
-        * Enable eval(): add 'unsafe-eval' to default-src
-    * Create your own at http://cspisawesome.com
-    -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
+    
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="css/jquery.mobile.icons.min.css" />
+    <link href="css/jquery.mobile-1.4.5.min.css" rel="stylesheet"  />
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <title>Hello World</title>
+    <title>Play audio</title>
 </head>
 
 <body>
-    <div class="app">
-        <h1>PhoneGap Template</h1>
-        <div>
-            <p>hello world</p>
-            <p>edit this HTML page, the CSS file and the JS file</p>
-            <p id="change">This text will change when you run this app on android or ios</p>
+    <!-- page one -->
+    <div class="custom-background" data-role="page" data-theme="a" id="pageone">
+        <div data-role="main" class="ui-content">
+            <h3>Play locally stored mp3</h3>
+            <a id="play-btn-one"  class="ui-btn" href="#">Play First Audio</a>
+            <a id="play-btn-two"  class="ui-btn" href="#">Play Second Audio</a>
+            <a id="pauseBtn"  class="ui-btn" href="#">Pause</a>
         </div>
-    </div>
+    </div> 
+    <!-- page one -->
+
+    
     <script type="text/javascript" src="cordova.js"></script>
+
+    <script type="text/javascript" src="js/audio-player.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 
