added more audio

--- a/www/index.html
+++ b/www/index.html
@@ -23,9 +23,12 @@
     <div class="custom-background" data-role="page" data-theme="a" id="pageone">
         <div data-role="main" class="ui-content">
             <h3>Play locally stored mp3</h3>
-            <a id="play-btn-one"  class="ui-btn" href="#">Play First Audio</a>
-            <a id="play-btn-two"  class="ui-btn" href="#">Play Second Audio</a>
-            <a id="pauseBtn"  class="ui-btn" href="#">Pause</a>
+            <a id="play-btn-one"  class="ui-btn" href="#">Play abd Audio</a>
+            <a id="play-btn-two"  class="ui-btn" href="#">Play white christmas Audio</a>
+            <a id="play-btn-three"  class="ui-btn" href="#">Play alpha omega Audio</a>
+            <a id="play-btn-four"  class="ui-btn" href="#">Play xyz Audio</a>
+            <a id="play-btn-five"  class="ui-btn" href="#">Play 123 Audio</a>
+            <!-- <a id="pauseBtn"  class="ui-btn" href="#">Pause</a> -->
         </div>
     </div> 
     <!-- page one -->
