added device ready msg

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <div class="app">
         <h1>Audio player</h1>
         <p>This player demos a simple api created from the rather convoluted and tricky to use cordova-plugin-media</p>
+        <p id="deviceready"></p>
 
         <h3>first audio</h3>
         <h2><a href="#" id="play-btn-one">play oboe mp3</a><h2>
